--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 - name: Upload a Build Artifact
   uses: actions/upload-artifact@v3.1.2
-  with:
+  with:arun
     # Artifact name
     name: # optional, default is artifact
     # A file, directory or wildcard pattern that describes what to upload
